--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Tryk på% -knappen på kontrolpanelet for at aktivere den.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Stemmeassistent-kommandoer",
     "edit_favorites": "Rediger favoritter",
     "dom_hot_water": "Varmt vand",
     "delete_all_schedu_tips": "Er du sikker på, at du vil slette alle tidsplaner?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Enheden er i standbytilstand og kan ikke starte ECO",
     "remote_control_not_support_eco": "Fjernbetjeningen er ikke aktiveret, kan ikke starte ECO",
     "convert_model_not_support_eco": "Enheden er i Convert-tilstand og kan ikke starte ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "For at sende stemmekommandoer til enheden skal du sørge for at bruge enhedsnavnet, der er angivet i Amazon Alexa-appen.",
+    "va_google_commands_tips": "For at sende stemmekommandoer til enheden skal du sørge for at bruge enhedsnavnet, der er angivet i Google-appen.",
+    "va_alexa_commands_link_tips": "For at bruge stemmekommandoer skal du linke din Amazon Alexa.",
+    "va_google_commands_link_tips": "For at bruge stemmekommandoer skal du linke til Google.",
+    "link_amazon_alexa": "Link til amazon alexa",
+    "link_google": "Link google",
     "issue_category": "Problemkategori",
     "select_issue_category": "Vælg problemkategori",
     "issue_cant_connect_device": "Jeg kan ikke tilslutte min enhed",
