--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Πατήστε το κουμπί% στον πίνακα ελέγχου για να το ενεργοποιήσετε.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Εντολές Voice Assistant",
     "edit_favorites": "Επεξεργασία αγαπημένων",
     "dom_hot_water": "Ζεστό νερό χρήσης",
     "delete_all_schedu_tips": "Είστε βέβαιοι ότι θέλετε να διαγράψετε όλο τον προγραμματισμό;",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Η συσκευή βρίσκεται σε κατάσταση αναμονής, δεν μπορεί να ξεκινήσει το ECO",
     "remote_control_not_support_eco": "Η απομακρυσμένη διαχείριση δεν είναι ενεργοποιημένη, δεν μπορεί να ξεκινήσει το ECO",
     "convert_model_not_support_eco": "Η συσκευή βρίσκεται σε κατάσταση Convert, δεν μπορεί να ξεκινήσει το ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Για να στείλετε με επιτυχία φωνητικές εντολές στη συσκευή, βεβαιωθείτε ότι χρησιμοποιείτε το όνομα της συσκευής που έχει οριστεί στην εφαρμογή Amazon Alexa.",
+    "va_google_commands_tips": "Για να στείλετε με επιτυχία φωνητικές εντολές στη συσκευή, βεβαιωθείτε ότι χρησιμοποιείτε το όνομα της συσκευής που έχει οριστεί στην εφαρμογή Google.",
+    "va_alexa_commands_link_tips": "Για να χρησιμοποιήσετε φωνητικές εντολές, συνδέστε το Amazon Alexa.",
+    "va_google_commands_link_tips": "Για να χρησιμοποιήσετε φωνητικές εντολές, συνδέστε το Google.",
+    "link_amazon_alexa": "Σύνδεσμος amazon alexa",
+    "link_google": "Σύνδεση google",
     "issue_category": "Κατηγορία θέματος",
     "select_issue_category": "Επιλέξτε κατηγορία ζητήματος",
     "issue_cant_connect_device": "Δεν μπορώ να συνδέσω τη συσκευή μου",
