--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "לחץ על כפתור% בלוח הבקרה כדי לאפשר אותו.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "פקודות עוזר קולי",
     "edit_favorites": "ערוך מועדפים",
     "dom_hot_water": "מים חמים לשימוש ביתי",
     "delete_all_schedu_tips": "האם אתה בטוח שברצונך למחוק את כל התזמונים?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "המכשיר נמצא במצב המתנה, לא ניתן להפעיל ECO",
     "remote_control_not_support_eco": "השליטה מרחוק אינה מופעלת, לא ניתן להפעיל ECO",
     "convert_model_not_support_eco": "ההתקן נמצא במצב Convert, לא ניתן להפעיל ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "כדי לשלוח בהצלחה פקודות קוליות למכשיר, הקפידו להשתמש בשם המכשיר שהוגדר באפליקציית Amazon Alexa.",
+    "va_google_commands_tips": "כדי לשלוח בהצלחה פקודות קוליות למכשיר, הקפד להשתמש בשם המכשיר שהוגדר באפליקציית Google.",
+    "va_alexa_commands_link_tips": "כדי להשתמש בפקודות קוליות, קשר את Amazon Alexa שלך.",
+    "va_google_commands_link_tips": "כדי להשתמש בפקודות קוליות, קשר אותך ל-Google.",
+    "link_amazon_alexa": "קישור לאמזון אלקסה",
+    "link_google": "קישור לגוגל",
     "issue_category": "קטגוריית נושא",
     "select_issue_category": "בחר קטגוריית בעיה",
     "issue_cant_connect_device": "אני לא יכול לחבר את המכשיר שלי",
