--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "コントロールパネルの％ボタンを押して有効にしてください。",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "音声アシスタントコマンド",
     "edit_favorites": "お気に入りを編集",
     "dom_hot_water": "給湯",
     "delete_all_schedu_tips": "すべてのスケジュールを削除してもよろしいですか？",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "デバイスが待機モードになっており、ECOを起動できません",
     "remote_control_not_support_eco": "リモートコントロールが有効になっていないため、ECOを起動できません",
     "convert_model_not_support_eco": "デバイスがConvertモードになっており、ECOを起動できません",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "デバイスに音声コマンドを正常に送信するには、Amazon Alexa アプリで設定されたデバイス名を使用してください。",
+    "va_google_commands_tips": "デバイスに音声コマンドを正常に送信するには、Google アプリで設定されたデバイス名を使用してください。",
+    "va_alexa_commands_link_tips": "音声コマンドを使用するには、Amazon Alexa をリンクします。",
+    "va_google_commands_link_tips": "音声コマンドを使用するには、Google にリンクします。",
+    "link_amazon_alexa": "リンク アマゾン アレクサ",
+    "link_google": "リンク グーグル",
     "issue_category": "問題カテゴリ",
     "select_issue_category": "問題カテゴリを選択",
     "issue_cant_connect_device": "デバイスを接続できません",
