--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Басқару панеліндегі% түймешігін басыңыз, оны қосу үшін.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Дауыстық көмекші пәрмендері",
     "edit_favorites": "Таңдаулыларды өңдеу",
     "dom_hot_water": "Тұрмыстық ыстық су",
     "delete_all_schedu_tips": "Барлық кестені жойғыңыз келетініне сенімдісіз бе?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Құрылғы күту режимінде, ECO-ны іске қосу мүмкін емес",
     "remote_control_not_support_eco": "Қашықтан басқару қосылмаған, ECO-ны іске қосу мүмкін емес",
     "convert_model_not_support_eco": "Құрылғы Convert режимінде, ECO-ны іске қосу мүмкін емес",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Құрылғыға дауыстық пәрмендерді сәтті жіберу үшін Amazon Alexa қолданбасында орнатылған құрылғы атауын пайдаланғаныңызға көз жеткізіңіз.",
+    "va_google_commands_tips": "Құрылғыға дауыстық пәрмендерді сәтті жіберу үшін Google қолданбасында орнатылған құрылғы атауын пайдаланғаныңызға көз жеткізіңіз.",
+    "va_alexa_commands_link_tips": "Дауыстық пәрмендерді пайдалану үшін Amazon Alexa жүйесін байланыстырыңыз.",
+    "va_google_commands_link_tips": "Дауыстық пәрмендерді пайдалану үшін Google-ды байланыстырыңыз.",
+    "link_amazon_alexa": "Amazon alexa сілтемесі",
+    "link_google": "Google сілтемесі",
     "issue_category": "Мәселе санаты",
     "select_issue_category": "Мәселе санатын таңдаңыз",
     "issue_cant_connect_device": "Мен құрылғымды қоса алмаймын",
