--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Притиснете го копчето% на контролното табло за да го овозможите.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Команди на гласовниот асистент",
     "edit_favorites": "Уреди омилени",
     "dom_hot_water": "Топла вода",
     "delete_all_schedu_tips": "Дали сте сигурни дека сакате да го избришете целото закажување?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Уредот е во режим на подготвеност, не може да започне ECO",
     "remote_control_not_support_eco": "Далечинското управување не е овозможено, не може да започне ECO",
     "convert_model_not_support_eco": "Уредот е во режим Convert, не може да започне ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "За успешно испраќање гласовни команди на уредот, погрижете се да го користите името на уредот поставено во апликацијата Amazon Alexa.",
+    "va_google_commands_tips": "За успешно испраќање гласовни команди на уредот, погрижете се да го користите името на уредот поставено во апликацијата Google.",
+    "va_alexa_commands_link_tips": "За да користите гласовни команди, поврзете ја вашата Amazon Alexa.",
+    "va_google_commands_link_tips": "За да користите гласовни команди, поврзете ве со Google.",
+    "link_amazon_alexa": "Поврзете го Амазон Алекса",
+    "link_google": "Поврзете го google",
     "issue_category": "Категорија на прашања",
     "select_issue_category": "Изберете категорија на проблем",
     "issue_cant_connect_device": "Не можам да го поврзам мојот уред",
