--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Натисніть кнопку% на панелі керування, щоб увімкнути її.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Команди голосового помічника",
     "edit_favorites": "Редагувати обране",
     "dom_hot_water": "Гаряча вода",
     "delete_all_schedu_tips": "Ви впевнені, що хочете видалити всі розклади?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Пристрій знаходиться в режимі очікування, неможливо запустити ECO",
     "remote_control_not_support_eco": "Дистанційне керування не ввімкнено, неможливо запустити ECO",
     "convert_model_not_support_eco": "Пристрій знаходиться в режимі Convert, неможливо запустити ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Щоб успішно надсилати голосові команди на пристрій, переконайтеся, що ви використовуєте назву пристрою, налаштовану в додатку Amazon Alexa.",
+    "va_google_commands_tips": "Щоб успішно надсилати голосові команди на пристрій, переконайтеся, що ви використовуєте назву пристрою, налаштовану в програмі Google.",
+    "va_alexa_commands_link_tips": "Щоб використовувати голосові команди, підключіть Amazon Alexa.",
+    "va_google_commands_link_tips": "Щоб використовувати голосові команди, зв’яжіть свій Google.",
+    "link_amazon_alexa": "Посилання на amazon alexa",
+    "link_google": "Посилання google",
     "issue_category": "Категорія випуску",
     "select_issue_category": "Виберіть категорію проблеми",
     "issue_cant_connect_device": "Я не можу підключити свій пристрій",
