--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "اضغط على الزر% في لوحة التحكم لتمكينه.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "أوامر المساعد الصوتي",
     "edit_favorites": "تحرير المفضلة",
     "dom_hot_water": "المياه الساخنة المنزلية",
     "delete_all_schedu_tips": "هل أنت متأكد أنك تريد حذف كل الجدولة؟",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "الجهاز في وضع الاستعداد، لا يمكن بدء ECO",
     "remote_control_not_support_eco": "التحكم عن بعد غير مفعل، لا يمكن بدء ECO",
     "convert_model_not_support_eco": "الجهاز في وضع Convert، لا يمكن بدء ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "لإرسال الأوامر الصوتية إلى الجهاز بنجاح، تأكد من استخدام اسم الجهاز المعين في تطبيق Amazon Alexa.",
+    "va_google_commands_tips": "لإرسال الأوامر الصوتية إلى الجهاز بنجاح، تأكد من استخدام اسم الجهاز المحدد في تطبيق Google.",
+    "va_alexa_commands_link_tips": "لاستخدام الأوامر الصوتية، قم بربط جهاز Amazon Alexa الخاص بك.",
+    "va_google_commands_link_tips": "لاستخدام الأوامر الصوتية، قم بربط حسابك بـ Google.",
+    "link_amazon_alexa": "ربط الأمازون اليكسا",
+    "link_google": "ربط جوجل",
     "issue_category": "فئة المشكلة",
     "select_issue_category": "حدد فئة المشكلة",
     "issue_cant_connect_device": "لا أستطيع توصيل جهازي",
