--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Натиснете бутона% на контролния панел, за да го активирате.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Команди за гласов асистент",
     "edit_favorites": "Редактиране на любими",
     "dom_hot_water": "Топла вода",
     "delete_all_schedu_tips": "Сигурни ли сте, че искате да изтриете всички графици?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Устройството е в режим на готовност и не може да стартира ECO",
     "remote_control_not_support_eco": "Дистанционното управление не е включено, не може да стартира ECO",
     "convert_model_not_support_eco": "Устройството е в режим Convert и не може да стартира ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "За да изпратите успешно гласови команди към устройството, уверете се, че използвате името на устройството, зададено в приложението Amazon Alexa.",
+    "va_google_commands_tips": "За да изпратите успешно гласови команди до устройството, уверете се, че използвате името на устройството, зададено в приложението Google.",
+    "va_alexa_commands_link_tips": "За да използвате гласови команди, свържете своя Amazon Alexa.",
+    "va_google_commands_link_tips": "За да използвате гласови команди, свържете Google.",
+    "link_amazon_alexa": "Линк към amazon alexa",
+    "link_google": "Линк google",
     "issue_category": "Категория на проблема",
     "select_issue_category": "Изберете категория проблем",
     "issue_cant_connect_device": "Не мога да свържа устройството си",
