--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "دکمه٪ را در پنل کنترل فشار دهید تا آن را فعال کنید.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "دستورات دستیار صوتی",
     "edit_favorites": "ویرایش علاقه‌مندی‌ها",
     "dom_hot_water": "آب گرم خانگی",
     "delete_all_schedu_tips": "آیا مطمئن هستید که می‌خواهید تمام زمان‌بندی‌ها را حذف کنید؟",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "دستگاه در حالت آماده‌باش است، نمی‌توان ECO را راه‌اندازی کرد",
     "remote_control_not_support_eco": "کنترل از راه دور فعال نشده است، نمی‌توان ECO را راه‌اندازی کرد",
     "convert_model_not_support_eco": "دستگاه در حالت Convert است، نمی‌توان ECO را راه‌اندازی کرد",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "برای ارسال موفقیت آمیز دستورات صوتی به دستگاه، مطمئن شوید که از نام دستگاه تنظیم شده در برنامه Amazon Alexa استفاده کنید.",
+    "va_google_commands_tips": "برای ارسال موفقیت آمیز دستورات صوتی به دستگاه، حتماً از نام دستگاه تنظیم شده در برنامه Google استفاده کنید.",
+    "va_alexa_commands_link_tips": "برای استفاده از دستورات صوتی، آمازون الکسای خود را پیوند دهید.",
+    "va_google_commands_link_tips": "برای استفاده از دستورات صوتی، شما را به Google مرتبط کنید.",
+    "link_amazon_alexa": "لینک آمازون الکسا",
+    "link_google": "لینک گوگل",
     "issue_category": "دسته بندی موضوع",
     "select_issue_category": "دسته بندی مسئله را انتخاب کنید",
     "issue_cant_connect_device": "من نمی توانم دستگاهم را وصل کنم",
