--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "कृपया इसे सक्षम करने के लिए नियंत्रण पैनल पर% बटन दबाएं।",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "वॉयस असिस्टेंट कमांड",
     "edit_favorites": "पसंदीदा संपादित करें",
     "dom_hot_water": "घरेलू गर्म पानी",
     "delete_all_schedu_tips": "क्या आप वाकई सभी अनुसूचियों को हटाना चाहते हैं?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "डिवाइस स्टैंडबाय मोड में है, ECO शुरू नहीं कर सकता",
     "remote_control_not_support_eco": "रिमोट कंट्रोल चालू नहीं है, ECO शुरू नहीं कर सकता",
     "convert_model_not_support_eco": "डिवाइस Convert मोड में है, ECO शुरू नहीं कर सकता",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "डिवाइस पर सफलतापूर्वक वॉयस कमांड भेजने के लिए, Amazon Alexa ऐप में सेट किए गए डिवाइस नाम का उपयोग करना सुनिश्चित करें।",
+    "va_google_commands_tips": "डिवाइस पर सफलतापूर्वक वॉइस कमांड भेजने के लिए, Google ऐप में सेट किए गए डिवाइस नाम का उपयोग करना सुनिश्चित करें।",
+    "va_alexa_commands_link_tips": "वॉयस कमांड का उपयोग करने के लिए, अपने अमेज़न एलेक्सा को लिंक करें।",
+    "va_google_commands_link_tips": "ध्वनि आदेशों का उपयोग करने के लिए, अपने Google से जुड़ें.",
+    "link_amazon_alexa": "लिंक अमेज़न एलेक्सा",
+    "link_google": "लिंक गूगल",
     "issue_category": "समस्या श्रेणी",
     "select_issue_category": "समस्या श्रेणी चुनें",
     "issue_cant_connect_device": "मैं अपना डिवाइस कनेक्ट नहीं कर पा रहा हूँ",
