--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Pressione o botão% no painel de controle para ativá-lo.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Comandos do assistente de voz",
     "edit_favorites": "Editar favoritos",
     "dom_hot_water": "Água quente doméstica",
     "delete_all_schedu_tips": "Tem certeza de que deseja excluir todos os agendamentos?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "O dispositivo está no modo de espera, não é possível iniciar ECO",
     "remote_control_not_support_eco": "O controle remoto não está ativado, não é possível iniciar ECO",
     "convert_model_not_support_eco": "O dispositivo está no modo Convert, não é possível iniciar ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Para enviar comandos de voz ao dispositivo com êxito, certifique-se de usar o nome do dispositivo definido no aplicativo Amazon Alexa.",
+    "va_google_commands_tips": "Para enviar comandos de voz ao dispositivo com êxito, certifique-se de usar o nome do dispositivo definido no Google app.",
+    "va_alexa_commands_link_tips": "Para usar comandos de voz, vincule seu Amazon Alexa.",
+    "va_google_commands_link_tips": "Para usar comandos de voz, vincule seu Google.",
+    "link_amazon_alexa": "link amazon alexa",
+    "link_google": "Vincular Google",
     "issue_category": "Categoria do problema",
     "select_issue_category": "Selecione a categoria do problema",
     "issue_cant_connect_device": "Não consigo conectar meu dispositivo",
