--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -3722,7 +3722,7 @@
     "dw_remote_guide_eu": "Apăsați butonul% de pe panoul de control pentru a-l activa.",
     "atw_no_device_confirm_first": "",
     "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "",
+    "voice_assistant_commands": "Comenzi ale asistentului vocal",
     "edit_favorites": "Editează favoritele",
     "dom_hot_water": "Apă caldă menajeră",
     "delete_all_schedu_tips": "Sigur doriți să ștergeți toate programările?",
@@ -3837,12 +3837,12 @@
     "device_standby_can_not_start_eco": "Dispozitivul este în modul de așteptare, nu poate porni ECO",
     "remote_control_not_support_eco": "Controlul de la distanță nu este activat, nu poate porni ECO",
     "convert_model_not_support_eco": "Dispozitivul este în modul Convert, nu poate porni ECO",
-    "va_alexa_commands_tips": "",
-    "va_google_commands_tips": "",
-    "va_alexa_commands_link_tips": "",
-    "va_google_commands_link_tips": "",
-    "link_amazon_alexa": "",
-    "link_google": "",
+    "va_alexa_commands_tips": "Pentru a trimite cu succes comenzi vocale către dispozitiv, asigurați-vă că utilizați numele dispozitivului setat în aplicația Amazon Alexa.",
+    "va_google_commands_tips": "Pentru a trimite cu succes comenzi vocale către dispozitiv, asigurați-vă că utilizați numele dispozitivului setat în aplicația Google.",
+    "va_alexa_commands_link_tips": "Pentru a utiliza comenzi vocale, conectați-vă Amazon Alexa.",
+    "va_google_commands_link_tips": "Pentru a utiliza comenzi vocale, conectați-vă la Google.",
+    "link_amazon_alexa": "Link amazon alexa",
+    "link_google": "Link google",
     "issue_category": "Categoria problemei",
     "select_issue_category": "Selectați categoria problemei",
     "issue_cant_connect_device": "Nu îmi pot conecta dispozitivul",
